--- a/Glitch/Glitch Files 09-11-2021/views/index.html
+++ b/Glitch/Glitch Files 09-11-2021/views/index.html
@@ -19,7 +19,7 @@
 <style>
 	body {
 		background-color: #3c3535;
-		background-image: url("https://stratfordcollegedublin-my.sharepoint.com/personal/imurphy2016_student_stratfordcollege_ie/Documents/Alt%201/snake-bg-opac.png");
+		background-image: url("https://i.imgur.com/Fd5wl7J.png");
 	}
 
 	img {
